k8s-yamls-master/k8s-yamls-master/live/aws/helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: hello
  name: hello
  namespace: lucida-lab
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      # - args:
        # - -c
        # - source /vault/secrets/config && sleep 8640
        # command:
        # - sh
      - image: 241080764191.dkr.ecr.us-west-2.amazonaws.com/lucidapoc/simple-hello-www:1
        imagePullPolicy: IfNotPresent
        name: hello
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 25m
            memory: 50Mi
      securityContext:
        runAsUser: 7070
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
  namespace: lucida-lab
spec:
  type: ClusterIP
  ports:
  - name: hello
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
---
apiVersion:  networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: hello
  namespace: lucida-lab
spec:
  rules:
  - host: lucida-lab.medimpact.com
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: 8080
        path: /hello
  tls:
  - hosts:
    - lucida-lab.medimpact.com
    secretName: lucida-lab.medimpact.com.certs
